--- a/index.html
+++ b/index.html
@@ -226,5 +226,5 @@ h4{
         </div>
     
 </body>
-<!-- <script type="text/javascript" src="scorebd.js"></script> -->
+<script type="text/javascript" src="scorebd.js"></script>
 </html>
