--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
 </head>
 <body>
+    <div class="time" >
+        <div style="color: aliceblue; font-size: 40px; font-weight: 500px;" id="timer">00:00:00</div>
+       <div class="all-butt">
+        <button id="startButton">Start</button>
+        <button id="stopButton">Stop</button>
+    </div>
+    </div>
+    
+    <center>
         <div class="container">
             <div id="home-div">
                 <h3 id="board-titlehome">HOME</h3>
@@ -39,12 +48,13 @@
             </div>
 
             <div id="but">
-            <h4 id="won">.</h4>
+            <h4 id="won"></h4>
             <button id="winner" onclick="win()">winner</button>
             </div>
 
         </div>
-    
+    </center>
+        <footer style="color: white;"> Made with ❤😊by 💎💎💎</footer>
 </body>
 <script type="text/javascript" src="scorebd.js"></script>
 </html>
