--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div id="but">
             <h4 id="won"></h4>
-            <button id="winner" onclick="win()">winner</button>
+            <button id="winner" onclick="win()" style="color: aliceblue;">winner</button>
             </div>
 
         </div>
