--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="startButton">Start</button>
         <button id="stopButton">Stop</button>
     </div>
-    <center><h4 style="position: ;" id="won"></h4></center>
+    <center><h4 style="font-family: cursive sans-serif; " id="won"></h4></center>
     </div>
     
     <center>
