--- a/index.html
+++ b/index.html
@@ -23,39 +23,48 @@
     
     <center>
         <div class="container">
-            <div id="home-div">
-                <h3 id="board-titlehome">HOME</h3>
-                <div style="display: flex;">
-                    <img src="ball2.jpg" alt="logo" class="home-logo">
-                    <div id="homescore"><h3 id="score-home">0</h3></div>
-                </div>
-                <div id="incree">
-                    <button id="inc" onclick="add1()">+1</button>
-                    <button id="inc" onclick="add2()">+2</button>
-                    <button id="inc" onclick="add3()">+3</button>
-                </div>
-            </div>
+                <div id="home-div">
+                    <h3 id="board-titlehome">HOME</h3>
+                    <div style="display: flex;">
+                        <img src="ball2.jpg" alt="logo" class="home-logo">
+                        <div id="homescore"><h3 id="score-home">0</h3></div>
+                    </div>
+                    <div id="incree">
+                        <button id="inc" onclick="add1()">+1 </button>
+                        <button id="inc" onclick="add2()">+2 </button>
+                        <button id="inc" onclick="add3()">+3 </button>
+                    </div>
 
-            <div id="guest-div">
-                <h3 id="board-title">GUEST</h3>
-                <div style="display: flex;">
-                    <div id="guestscore"><h3 id="score-guest">0</h3></div>
-                    <img src="pitch.jpg" alt="logo" class="guest-logo">
+                    <div id="incree">
+                        <button id="inc" onclick="sub1()">-1 </button>
+                        <button id="inc" onclick="sub2()">-2 </button>
+                    </div>
                 </div>
-                <div id="decre">
-                    <button id="dec" onclick="add()">+1</button>
-                    <button id="dec" onclick="addd()">+2</button>
-                    <button id="dec" onclick="adddd()">+3</button>
+
+                <div id="guest-div">
+                    <h3 id="board-title">GUEST</h3>
+                    <div style="display: flex;">
+                        <div id="guestscore"><h3 id="score-guest">0</h3></div>
+                        <img src="pitch.jpg" alt="logo" class="guest-logo">
+                    </div>
+                    <div id="decre">
+                        <button id="dec" onclick="add()">+1</button>
+                        <button id="dec" onclick="addd()">+2</button>
+                        <button id="dec" onclick="adddd()">+3</button>
+                    </div>
+                    <div id="decre">
+                        <button id="dec" onclick="sub()">-1</button>
+                        <button id="dec" onclick="subb()">-2</button>
+                    </div>
                 </div>
-            </div>
         </div>
 
         <div id="but">
-           
             <button style="border-radius: 10px; color: cornflowerblue;" id="winner" onclick="win()"><h3 style="color: black;">WINNER!</h3></button>
-            </div>
+        </div>
     </center>
         <footer style="color: rgb(255, 255, 255);"> Made with ❤😊by 💎💎💎</footer>
 </body>
 <script type="text/javascript" src="scorebd.js"></script>
 </html>
+ 
