--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         </div>
 
         <div id="but">
-            <button style="border-radius: 10px; color: cornflowerblue;" id="winner" onclick="win()"><h3 style="color: black;">WINNER!</h3></button>
+            <button style="border-radius: 10px;background-color: cornflowerblue;" id="winner" onclick="win()"><h3 style="color: black;">WINNER!</h3></button>
+            <!-- HTML -->
+        <button  style="background-color: rgb(201, 33, 33); border-radius: 5px;" onclick="reset()"><h3 style="color:white ;">Reset!</h3></button>
+
         </div>
     </center>
         <footer style="color: rgb(255, 255, 255);"> Made with ❤😊by 💎💎💎</footer>
